@@ -27,9 +27,10 @@
 #include "config.h"
 #include "IntRect.h"
 
-#include "MathExtras.h"
 #include <d2d1.h>
 #include <windows.h>
+
+#include <wtf/MathExtras.h>
 
 namespace WebCore {
 
