@@ -26,9 +26,10 @@
 #include "config.h"
 #include "IntSize.h"
 
-#include "MathExtras.h"
 #include <d2d1.h>
 #include <windows.h>
+
+#include <wtf/MathExtras.h>
 
 namespace WebCore {
 
